force-app/main/default/objects/Project_assignment__c/Project_assignment__c.object-meta.xml
<CustomObject>
    <label>Projectassignment</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projectassignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>