force-app/main/default/objects/Project_assignment__c/fields/Project_daysleft__c.field-meta.xml
<CustomField>
    <fullName>Project_daysleft__c</fullName>
    <formula>TODAY()  -  Project_deadline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project daysleft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>