force-app/main/default/objects/Project_assignment__c/fields/Project_deadline__c.field-meta.xml
<CustomField>
    <fullName>Project_deadline__c</fullName>
    <label>Project deadline</label>
    <type>Date</type>
</CustomField>