force-app/main/default/objects/Project_assignment__c/fields/Project_Priority__c.field-meta.xml
<CustomField>
    <fullName>Project_Priority__c</fullName>
    <label>Project Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>high</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>