force-app/main/default/objects/Project_assignment__c/fields/Project_status__c.field-meta.xml
<CustomField>
    <fullName>Project_status__c</fullName>
    <label>Project status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>